Update, works w/ Spark 3.4.0-SNAPSHOT, Scala 2.13/3.x